@@ -1,5 +1,9 @@
 CHANGES:
 
+09/25/2013:
+- HanMac Word-J: retrieve the patterns, the textboxes borders and links,
+  try to reconstruct a single picture for a group of shape, ...
+
 09/23/2013:
 - HanMac Word-K: retrieve the patterns, the textboxes borders and links,
   try to reconstruct a single picture for a group of shape, ...
